--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.5",
+    "lodash": "^4.17.21",
     "next": "13.4.5",
     "next-auth": "^4.24.5",
     "postcss": "8.4.24",
@@ -28,5 +29,4 @@
     "postcss": "^8.4.20",
     "tailwindcss": "^3.2.4"
   }
-
 }
